# EngComp-Grand-Challenge

./: .gitignore  README.md  energy_production_mix_by_area.py  energy_usage_and_production.py  main.py  pyproject.toml  renewable_generation_vs_sources.py  renewable_production_overtime.py
data/: land_data.csv  power_stations.csv  references.txt  renewables_over_time.csv  transmission_lines.csv
data/lga/: lga.dbf  lga.shx
